--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ $(document).ready(function () {
 <div id="data-manipulation-and-transformation" class="section level3">
 <h3>Data Manipulation and Transformation</h3>
 <ul>
-<li><a href="dt00_data-manipulations.html">Data Manipulation</a> <em>an introduction to wrangling data</em></li>
+<li><a href="dt00_data-manipulations.html">Data Manipulation</a> <em>introduction to wrangling data</em></li>
 <li><a href="dt01_data-trans-joins-exercises.html">Reshaping, Transforming, and Joining Data in R</a> <em>transpose, pivot, split, and combine data</em></li>
 </ul>
 </div>
