--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@ $(document).ready(function () {
 <h3>Data Visualization</h3>
 <ul>
 <li><a href="gg00_intro-to-data-viz.html">Introduction to Data Visualization with ggplot2</a> <em>exercises for introducing ggplot2</em></li>
+<li><a href="gg01_data-viz-as-comm.html">Data Visualization as Communication</a> <em>using graphs to effectively share ideas</em></li>
 </ul>
 </div>
 <div id="dashboards-and-shiny" class="section level3">
