--- a/gg00_intro-to-data-viz.html
+++ b/gg00_intro-to-data-viz.html
@@ -1257,6 +1257,7 @@ TidyTopPharmComCaps %&gt;%
 <div id="using-facets" class="section level2 tabset" number="7.6">
 <h2 class="tabset" number="7.6"><span class="header-section-number">7.6</span> Using Facets</h2>
 <p>In the next few exercises we’re going to see how to use facets to explore values across different levels and scales.</p>
+<p>Facets show subplots for different levels of a grouping variable.</p>
 <div id="exercise-11" class="section level3" number="7.6.1">
 <h3 number="7.6.1"><span class="header-section-number">7.6.1</span> exercise</h3>
 <p>Use <code>facet_wrap()</code> to split the graphs by <code>company_type</code></p>
